2009-11-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* international/mule.el (define-charset): Purecopy props.
	(load-with-code-conversion): Purecopy doc string and file name.
	(put-charset-property): Purecopy strings.
	(auto-coding-alist, auto-coding-regexp-alist): Purecopy initial value.

	* international/mule-cmds.el (register-input-method); Purecopy arguments.
	(define-char-code-property): Correctly purecopy the table.

	* international/ccl.el (define-ccl-program): Purecopy the docstring.

	* emacs-lisp/easy-mmode.el (define-minor-mode): Purecopy :lighter.

	* subr.el (add-hook): Purecopy strings.
	(eval-after-load): Purecopy load-history-regexp and the form.

	* custom.el (custom-declare-group): Purecopy load-file-name.

	* subr.el (menu-bar-separator): New defconst.
	* net/eudc.el (eudc-tools-menu):
	* international/mule-cmds.el (set-coding-system-map)
	(mule-menu-keymap):
	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-map):
	* vc-hooks.el (vc-menu-map):
	* replace.el (occur-mode-map):
	* menu-bar.el (menu-bar-file-menu, menu-bar-search-menu)
	(menu-bar-edit-menu, menu-bar-goto-menu, menu-bar-edit-menu)
	(menu-bar-custom-menu, menu-bar-showhide-menu)
	(menu-bar-options-menu, menu-bar-tools-menu)
	(menu-bar-encryption-decryption-menu, menu-bar-describe-menu)
	(menu-bar-search-documentation-menu, menu-bar-manuals-menu)
	(menu-bar-help-menu):
	* ediff-hook.el (menu-bar-ediff-menu, menu-bar-ediff-merge-menu):
	* buff-menu.el (Buffer-menu-mode-map): Use menu-bar-separator.

	* term/x-win.el (x-gtk-stock-map):
	* progmodes/vera-mode.el (auto-mode-alist):
	* progmodes/inf-lisp.el (inferior-lisp-filter-regexp)
	(inferior-lisp-program, inferior-lisp-load-command):
	* progmodes/hideshow.el (hs-special-modes-alist):
	* progmodes/gud.el (same-window-regexps):
	* progmodes/grep.el (grep-program, find-program, xargs-program):
	* net/telnet.el (same-window-regexps):
	* net/rlogin.el (same-window-regexps):
	* language/ethiopic.el (font-ccl-encoder-alist):