@@ -92,7 +92,7 @@
 (load "emacs-lisp/map-ynp")
 (load "cus-start")
 (load "international/mule")
-(load "international/mule-conf.el") ;Don't get confused if someone compiled this by mistake.
+(load "international/mule-conf")
 (load "env")
 (load "format")
 (load "bindings")
